Merge names into functional definitions